Fix mobile menu open color contrast
Refs #540

--- a/packages/block-library/src/blocks/header/scss/_menu-toggle.scss
+++ b/packages/block-library/src/blocks/header/scss/_menu-toggle.scss
@@ -30,7 +30,7 @@
   background: none !important;
 
   .c-menu-toggle__checkbox:checked ~ & {
-    @include apply-variation(5);
+    @include mobile-menu-open-color-scheme;
 
     .c-menu-toggle__slice--top {
       transform: rotate(45deg);
